--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -9,7 +9,6 @@ output: html_document
 library(dplyr)
 library(readr)
 library(tidyr)
-
 ```
 
 ### Research Question
@@ -46,6 +45,8 @@ library(tidyr)
 #######  -4 = "Nonrespondent"
 #######  -8 = "Survey component legitimate skip/NA"
 #######  -9 = "Missing"
+
+## need to revise
 ### Dependent Variables: 
 ##### [BYWRTNGA] Student writing ability (teacher-reported)
 ####### Description: This variable is a scale of student writing ability as reported by the student's base-year English teacher. Higher values represent higher teacher-rated student writing ability. Variable was created through principal factor analysis (weighted by BYSTUWT) and standardized to a mean of 0 and standard deviation of 1. Teacher responses about student writing ability were reverse-coded (so higher values on variables would indicate greater student writing ability), and only students for whom the English teacher provided a full set of responses were assigned a scale value. The coefficient of reliability (alpha) for the scale is 0.95.
@@ -54,18 +55,18 @@ library(tidyr)
 
 ```{r requirement checklist}
 #!!! mark O next to the criteria met !!!
-#Is document fully reproducible? (in Seulbi's run)
-#Is document fully reproducible? (in Sabreen's run) o
+#Is document fully reproducible? (in Seulbi's run) o
+#Is document fully reproducible? (in Sabreen's run) 
 #Is document fully reproducible? (in Tony's run)
 #Is document fully reproducible? (in Deanna's run)
 #Is document fully reproducible? (in Alex's run)
 #Does it include inline codes? 
 #Do we have two visualizations?
-#Used pivot_longer()
+#Used pivot_longer() o
 #used mutate() o
 #used select() o
 #used filter () o
-#used pivot_wider()
+#used pivot_wider() o
 #used group_by()
 #used summarize()
 
@@ -78,16 +79,15 @@ library(tidyr)
 # final requirement: pivot_longer(), mutate(), select(), filter(), pivot_wider()
 
 #retrieve data
-els <- read_csv("./data/els_02_12_byf3pststu_v1_0.csv")
+#els <- read_csv("./data/els_02_12_byf3pststu_v1_0.csv")
 #select columns 
-els <- els %>% dplyr::select(STU_ID, BYSEX, BYRACE, BYMOTHED, BYWRTNGA)
+#els <- els %>% dplyr::select(STU_ID, BYSEX, BYRACE, BYMOTHED, BYTXMSTD, F1TXMSTD)
 #save the revised (cleaned) data to csv
-write.csv(els,"./data/els_cleaned.csv", row.names = FALSE)
+#write.csv(els,"./data/els_cleaned.csv", row.names = FALSE)
 
 els <- read_csv("./data/els_cleaned.csv")
 
-
-
+#replace missing data code to NA
 els$BYSEX <- na_if(els$BYSEX, -4)
 els$BYSEX <- na_if(els$BYSEX, -8)
 els$BYRACE <- na_if(els$BYRACE, -4)
@@ -95,17 +95,18 @@ els$BYRACE <- na_if(els$BYRACE, -8)
 els$BYMOTHED <- na_if(els$BYMOTHED, -4)
 els$BYMOTHED <- na_if(els$BYMOTHED, -8)
 els$BYMOTHED <- na_if(els$BYMOTHED, -9)
-els$BYWRTNGA <- na_if(els$BYWRTNGA, -4)
-els$BYWRTNGA <- na_if(els$BYWRTNGA, -8)
-els$BYWRTNGA <- na_if(els$BYWRTNGA, -9)
+els$BYTXMSTD <- na_if(els$BYTXMSTD, -8)
+els$F1TXMSTD <- na_if(els$F1TXMSTD, -8)
 
+#remove if the row doesn't have both BY and F1 math scores
 els <- els %>% 
-  filter(!is.na(BYWRTNGA))
+  filter(!is.na(BYTXMSTD) | !is.na(F1TXMSTD))
 
+#rename
 els <- els %>%
   mutate(BYSEX = recode(BYSEX, 
-                        `1` = "Male", 
-                        `2` = "Female"),
+                          `1` = "Male", 
+                          `2` = "Female"),
          BYRACE = recode(BYRACE, 
                           `1` = "Native American/Alaskan", 
                           `2` = "Asian", 
@@ -115,36 +116,39 @@ els <- els %>%
                           `6` = "More than one race, non-Hispanic", 
                           `7` = "White, non-Hispanic"),
          BYMOTHED = recode(BYMOTHED,
-                    `1` = "Did not finish high school",
-                    `2` = "Graduated from high school or GED",
-                    `3` = "Attended 2-year school, no degree",
-                    `4` = "Graduated from 2-year school",
-                    `5` = "Attended college, no 4-year degree",
-                    `6` = "Graduated from college",
-                    `7` = "Completed Master's degree or equivalent",
-                    `8` = "Completed PhD, MD, other advanced degree"))
+                          `1` = "Did not finish high school",
+                          `2` = "Graduated from high school or GED",
+                          `3` = "Attended 2-year school, no degree",
+                          `4` = "Graduated from 2-year school",
+                          `5` = "Attended college, no 4-year degree",
+                          `6` = "Graduated from college",
+                          `7` = "Completed Master's degree or equivalent",
+                          `8` = "Completed PhD, MD, other advanced degree"))
 
-as.factor(els$BYSEX)
-as.factor(els$BYRACE)
-as.factor(els$BYMOTHED)
 
-#if needed
-els <- els %>%
-  mutate(BYMOTHED_ = case_when(BYMOTHED == "Did not finish high school" ~ "No high school diploma",
-                          BYMOTHED == "Graduated from high school or GED" | 
-                          BYMOTHED == "Attended 2-year school, no degree" ~ "High school diploma",
-                          BYMOTHED == "Graduated from 2-year school" | 
-                          BYMOTHED == "Attended college, no 4-year degree" |  
-                          BYMOTHED == "Graduated from college" ~ "Associate's or Bachelor's degree",
-                          BYMOTHED == "Completed Master's degree or equivalent" |
-                          BYMOTHED == "Completed PhD, MD, other advanced degree" ~ "Postbaccalaureate degree"))
+#rename columns to use pivot_longer
+colnames(els)[colnames(els) %in% c("BYTXMSTD", "F1TXMSTD")] <- c("Base", "Follow-up")
 
-els %>% 
-  pivot_wider(
-    names_from = BYSEX,
-    values_from = c(BYWRTNGA)
+els_longer <- els %>% 
+  pivot_longer(
+    cols = c('Base', 'Follow-up'),
+    names_to = "YEAR",
+    values_to = "MATH"
   )
 
+els_wider_by <- els %>% 
+  pivot_wider(
+    id_cols = !'Follow-up',
+    names_from = BYRACE,
+    values_from = c(Base)
+  )
+
+els_wider_f1 <- els %>% 
+  pivot_wider(
+    id_cols = !Base,
+    names_from = BYRACE,
+    values_from = c('Follow-up')
+  )
 
 ```
 
